--- a/style.css
+++ b/style.css
@@ -260,6 +260,68 @@ main hr {
   border-radius: 50%;
   text-align: center; 
 }
+
+/* ----------------contact----------------- */
+
+#contact{
+  padding: 30px 0;
+  margin: 80px;
+}
+
+.contact-left{
+  flex-basis: 35%;
+}
+
+.contact-right{
+  flex-basis: 60%;
+}
+
+.contact-left p{
+  margin-top: 30px;
+}
+
+.contact-left p i{
+  color: #fad503;
+  margin-right: 15px;
+  font-size: 25px;
+}
+
+.social-icons{
+  margin-top: 30px;
+}
+.social-icons a{
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #fad503;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  background-color: #ba9f03;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #dff191;
+}
+
+
+.social-icons a:hover{
+  color: antiquewhite;
+  transform: translateY(-5px);
+}
+
 .leftSection {
   font-size: 2rem;
 }
