--- a/style.css
+++ b/style.css
@@ -299,27 +299,59 @@ main hr {
 }
 .btn {
   display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
+  margin: 50px auto;
+  width: fit-content;
   text-decoration: none;
-  border-radius: 5px;
-  background-color: #ba9f03;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  border: 1px solid #dcce01;
+  padding: 14px 50px;
+  border-radius: 10px;
+  background-color: #dcce01;
+  color: rgb(255, 255, 255);
+  transition: background 0.5s;
 }
 
 .btn:hover {
-  background-color: #dff191;
+  background-color: #dbf191;
 }
-
 
 .social-icons a:hover{
   color: antiquewhite;
   transform: translateY(-5px);
+}
+
+.contact-right form{
+  width: 100%;
+}
+
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
+}
+
+form .btn{
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.copyright{
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+}
+
+.copyright i{
+  color: red;
 }
 
 .leftSection {
