--- a/style.css
+++ b/style.css
@@ -4,25 +4,55 @@
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: rgb(0, 0, 35);
   color: white;
   font-family: "Poppins", sans-serif;
 }
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 70px;
+
+#header{
+  width: 100%;
+  height: 100vh;
+  /* background-image: url(assets/homePhoto.png); */
+  background-size: cover;
+  background-position: center;
 }
 
-nav ul {
-  display: flex;
-  justify-content: center;
+.container{
+  padding: 10px 10%;
 }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* height: 70px; */
+  flex-wrap: wrap;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  transition: background-color 0.3s ease; 
+  z-index: 100;
+}
+
+.nav-colored {
+  background-color: #5c5c5cda; 
+}
+
+.logo{
+  width: 80px;
+}
+
 nav ul li {
+  display: inline-block;
   list-style: none;
-  margin: 0 23px;
+  margin: 10px 20px;
 }
 nav ul li a {
   text-decoration: none;
@@ -46,6 +76,15 @@ nav ul li a:hover::after {
   width: 100%;
 }
 
+.header-text{
+  margin-top: 10%;
+  margin-bottom: 0;
+  font-size: 30px;
+}
+
+.header-text h1{
+  font-size: 40px;
+}
 main hr {
   border: 0;
   background: #9c97f1;
@@ -53,22 +92,7 @@ main hr {
   margin: 40px 40px;
 }
 
-.firstSection {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 180px 0;
-}
-.firstSection > div {
-  width: 30%;
-}
-
 /* ---------about section--------- */
-#about {
-  padding: 80px 0;
-  color: #fff;
-}
-
 .row {
   display: flex;
   /* justify-content: space-between; */
@@ -142,12 +166,6 @@ main hr {
 }
 
 /* ------profiles-------- */
-
-#profiles{
-  padding: 30px 0;
-  margin: 80px;
-}
-
 .profiles-list{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -192,10 +210,6 @@ main hr {
     height: auto;
 }
 
-#projects{
-  padding: 30px 0;
-  margin: 80px;
-}
 
 .projects-list{
   display: grid;
@@ -262,12 +276,6 @@ main hr {
 }
 
 /* ----------------contact----------------- */
-
-#contact{
-  padding: 30px 0;
-  margin: 80px;
-}
-
 .contact-left{
   flex-basis: 35%;
 }
@@ -341,6 +349,13 @@ form .btn{
   margin-top: 20px;
   cursor: pointer;
 }
+
+#msg{
+  color: #61b752;
+  margin-top: -10px;
+  display: block;
+  text-align: center;
+}
 .copyright{
   width: 100%;
   text-align: center;
@@ -367,4 +382,78 @@ form .btn{
 }
 #element {
   color: #fad503;
+}
+
+/* ---------------responsiveness-------------- */
+nav .fa-solid.fa-circle-xmark,
+nav .fa-solid.fa-bars {
+  display: none;
+}
+
+@media only screen and (max-width: 600px){
+  /* #header img{
+    background-image: url();
+  } */
+
+  .header-text h1{
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  
+  nav.fa-solid.fa-circle-xmark{
+    display: block;
+    font-size: 25px;
+  }  
+  nav.fa-solid.fa-bars{
+    display: block;
+    font-size: 25px;
+  }  
+  nav ul{
+    background: #c5b100;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa-solid{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title{
+    font-size: 40px;
+  }
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+  .about-col-1 img {
+    width: 60%;
+    border-radius: 15px;
+    margin: 5px 50px;
+  }
+  .about-col-1{
+    margin-bottom: 30px;
+  }
+  .about-col-2{
+    font-size: 14px;
+  }
+  .tab-links{
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+  .copyright{
+    font-size: 14px;
+  }
 }
