--- a/style.css
+++ b/style.css
@@ -38,13 +38,14 @@ body {
 
 
 .angle-down-icon {
-  margin: 200px 0px 100px 530px; 
-  font-size: 36px;
+  display: flex;
+  justify-content: center;
+  margin-top: 30vh;
 }
 
 .angle-down-icon i {
-  font-size: 36px; 
-  animation: bounce 1.5s infinite; 
+  font-size: 50px; 
+  animation: bounce 1.2s infinite; 
 }
 
 nav {
