--- a/style.css
+++ b/style.css
@@ -17,25 +17,30 @@ html{
   scroll-behavior: smooth;
 }
 
-body {
+.front-page{
+  background-color: rgb(0, 0, 35);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+main {
   background-color: rgb(0, 0, 35);
   color: white;
   font-family: "Poppins", sans-serif;
 }
 
-#header{
-  width: 100%;
-  height: 100vh;
-  /* background-image: url(assets/homePhoto.png); */
-  background-size: cover;
-  background-position: center;
-}
+/* #header{
+  
+} */
 
 .container{
   padding: 10px 10%;
   position: relative;
 }
-
 
 .angle-down-icon {
   display: flex;
